fixed test config jumping up and down at certain zoom levels

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1652,7 +1652,7 @@ a:hover {
     justify-self: right;
     display: grid;
     // grid-auto-flow: row;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 0.7rem 0.7rem 0.7rem;
     grid-gap: 0.2rem;
     // width: min-content;
     // width: -moz-min-content;
